# dhbw_cleaner

./: README.md
cleaner_alpha/: CMakeLists.txt  package.xml
cleaner_alpha/config/: test_youbot_laser_scan.rviz
cleaner_alpha/include/cleaner_alpha/: CSTrajectoryGenerator.h  Gripper.h  JSTrajectoryGenerator.h  Manipulator.h  ObjectFinder.h  TrajectoryGenerator.h  TrajectoryGeneratorFactory.h  Youbot.h  YoubotBase.h
cleaner_alpha/include/cleaner_alpha/util/: ConstArray.h  Pose.h
cleaner_alpha/launch/: demo.launch  test_laser_scan.launch  test_torque.launch  test_torque2object_recognition.launch  test_youbot_laser_scan.launch  test_youbot_movement.launch  youbot_driver.launch
cleaner_alpha/launch/distributed/: control-nodes.launch  test_or_cheap.launch  test_or_expensive.launch
cleaner_alpha/robots/: youbot.urdf.xacro
cleaner_alpha/src/: Cleaner.cpp  Cleaner2.cpp
cleaner_alpha/src/classes/: CSTrajectoryGenerator.cpp  Direction.cpp  Gripper.cpp  JSTrajectoryGenerator.cpp  Manipulator.cpp  ObjectFinder.cpp  Pose.cpp  TrajectoryGeneratorFactory.cpp  Youbot.cpp  YoubotBase.cpp
cleaner_beta/: CMakeLists.txt  package.xml
cleaner_beta/include/youbot_arm_kinematics/: configuration_comparator.inl
cleaner_beta/launch/: demo.launch
cleaner_beta/src/: IK.cpp
laser_to_cloud/: CMakeLists.txt  package.xml
laser_to_cloud/launch/: test.launch
laser_to_cloud/src/: LaserScanToPointCloud.cpp
laser_to_cloud/test_data/: Mapping2.bag  diffdrive.xacro
object_finder_2d/: CMakeLists.txt  package.xml
object_finder_2d/config/: test_laser_scan.rviz  test_youbot_laser_scan.rviz
object_finder_2d/include/cleaner_alpha/: LaserScanToPointCloud.h  ObjectFinder.h
object_finder_2d/launch/: test_laser_assembler.launch  test_youbot_movement.launch  test_youbot_object_finder.launch
object_finder_2d/src/: ObjectFinder2.cpp  PointCloudObjectFinder.cpp
object_finder_2d/src/classes/: LaserScanToPointCloud.cpp  ObjectFinder.cpp
object_finder_2d/srv/: NearestPoint.srv
object_recognition/: CMakeLists.txt  package.xml
object_recognition/cmake/: find_object_2d-msg-paths.cmake  find_object_2dConfig.cmake
object_recognition/config/: object_orientation.yaml
object_recognition/include/: ObjectListener.h
object_recognition/launch/: find_object_2d.launch  find_object_3d.launch  find_object_3d_gui.launch
object_recognition/msg/: ObjectPosition.msg
object_recognition/settings/: object_recognition.ini
object_recognition/src/: ObjectListener.cpp
